不知道修改了什么，反正偶尔抛异常

--- a/pushCenter/settings.yaml
+++ b/pushCenter/settings.yaml
@@ -4,6 +4,7 @@ NAME: PushCenter
 DEBUG: True
 
 
+CELERY_BROKER_URL   :   redis:/localhost:6379/1
 AMQP__URL :    amqp://test:test@localhost:5672/%2f
 AMQP_QUEUE :    hello
 
@@ -11,7 +12,7 @@ REDIS_URL :    localhost
 REDIS_PORT :    6379
 REDIS_DB   :    0
 
-IGT_HOST : http://sdk.open.api.igexin.com/apiex.htm
+IGT_HOST :  http://sdk.open.api.igexin.com/apiex.htm
 ANDROID_APPKEY : 5Ppd2ltAfx7M4QbfkJ1vN9
 ANDROID_APPID : kILp1JiBjv7vmuVTSGOc38
 ANDROID_MASTERSECRET : zDnVTa1INk50HlV6Wy62p9
